# c_lab_classes

./: CMakeLists.txt  triangles.c
10_10_2024_third_lab/: 1_1_a_InputVerificationAndConversion.c  1_1_b_IntegerConversionWithAtof.c  1_1_c_d_VerificationOfTheNumberOfPassportCharacters.c  1_1_e_ConversionOfInputCharactersTouUpercaseLowercase.c  1_2MorseCodeTranslator.c  alphabet.in  homework.c  morse_command  morse_command.c  msg.in  output.txt  third_lab.c
17_10_2024_fifth_lab/: 1_1.c  1_2.c  2_1.c  file.txt  output.out
24_10_2024_sixth_lab/: 1_1_lab_5.c  rectangle_sorting_1.c  rectangle_sorting_2.c
26_09_2024_first_lab/: first_lab.c
3_10_2024_second_lab/: 3_10_2024_second_lab.c
Lab_6/: main.c  student_record_management_system.c  student_record_management_system.h  students.in
lab_08/: catalan_numbers.c  multiplication.c  palindromes.c  white-spaces_count.c
lab_6_2/: data.csv  data_header.csv  main.c
