cmake_minimum_required(VERSION 3.29)
project(c_lab_classes C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(26_09_2024_first_lab)

add_executable(1_1_a_InputVerificationAndConversion 10_10_2024_third_lab/1_1_a_InputVerificationAndConversion.c
        10_10_2024_third_lab/morse_command.c)
add_executable(1_1_b_IntegerConversionWithAtof 10_10_2024_third_lab/1_1_b_IntegerConversionWithAtof.c)
add_executable(1_1_c_d_VerificationOfTheNumberOfPassportCharacters 10_10_2024_third_lab/1_1_c_d_VerificationOfTheNumberOfPassportCharacters.c)
add_executable(1_1_e_ConversionOfInputCharactersTouUpercaseLowercase 10_10_2024_third_lab/1_1_e_ConversionOfInputCharactersTouUpercaseLowercase.c)
add_executable(1_2MorseCodeTranslator 10_10_2024_third_lab/1_2MorseCodeTranslator.c)
add_executable(morse_command 10_10_2024_third_lab/morse_command.c)


